--- a/write-up/COS424_HW1_EddieZhou_DawayChouRen.tex
+++ b/write-up/COS424_HW1_EddieZhou_DawayChouRen.tex
@@ -5,7 +5,23 @@
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{multirow}
-
+\usepackage{listings}
+\lstset{frame=tb,
+  language=R,
+  aboveskip=3mm,
+  belowskip=3mm,
+  showstringspaces=false,
+  columns=flexible,
+  basicstyle={\small\ttfamily},
+  numbers=none,
+  numberstyle=\tiny\color{gray},
+  keywordstyle=\color{blue},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{mauve},
+  breaklines=true,
+  breakatwhitespace=true
+  tabsize=3
+}
 \bibliographystyle{plos2009}
 
 
@@ -32,126 +48,62 @@ Princeton University\\
 \maketitle
 
 \begin{abstract}
-Streaming text data is ubiquitous: Google News, Twitter, Facebook, and many other websites have large numbers of posts from users every second. Often, we would like to classify these posts into specific categories as they arrive in order to organize the many new posts for other users to filter efficiently. In this assignment, we address the problem of classifying newsgroup posts using a number of different feature sets and methods for classification. We evaluate these methods on the 20 Newgroups data set, which contains 20,000 posts to twenty different newsgroups, where the newsgroup labels each post into each of twenty distinct classes. We train the classifiers on bag-of-words representations of each post, with and without feature selection. We find that decision trees and random forest classifiers uniformly have the highest precision and recall, whereas the perceptron and hinge loss perform poorly with respect to the other classifiers.
+Spam has plagued the inboxes of email users for decades now, and new companies and technologies have risen to fight the influx of ``the use of electronic messaging systems to send unsolicited messages (spam), especially advertising, as well as sending messages repeatedly on the same site.''  In this assignment, we address the problem of classifying emails into spam or ham (not spam) using two different feature sets, and a variety of different classifiers.  The datasets used are the training and testing partitions of the TREC 2007 spam track overview dataset.  We find that logistic regression in conjunction with bag-of-words features achieves the highest accuracy. but when examining different classifiers in a more refined and smaller feature space, a linear support vector machine achieves the best performance.
 \end{abstract}
 \section{Introduction}
-
-The need for classifying streaming text is everywhere. The Associated Press releases articles that need to be filed under specific headings in Google News. Twitter and Facebook analyze each post in real time. Emails arrive in our inbox and must be filtered into \emph{Spam} or \emph{Inbox}. We are interested in understanding which classification methods perform well on this task. Furthermore, we would like to understand the properties of a classifier that are useful in performing this task in order to consider developing new classifiers for this purpose.
-
-In this work, we evaluate ten separate classification methods in the task of classifying newsgroup categories from posts. For this task, we have modeled the posts using a bag-of-words representation. We evaluated the performance of each of the classification methods with and without feature selection to quantify the benefits of feature selection on classifier performance and also on the computational speed of each of the classifiers.
-
-\section{Related Work}
-
-This data set is the canonical text multi class classification data set in the machine learning community, and has been used as a benchmark for text classification methods in many contexts. In particular, recent text classification methods have used the bag-of-words representation of this data set projected down to a set of latent \emph{topics}, where the projection is informed by the class label~\cite{zhu2009,lacoste2009}. Then, for testing, new posts also are considered in the context of the low-dimensional topic space instead of their bag-of-words representation. This suggests that feature selection may benefit the classification task.
-
-
+According to a report on workplace productivity by McKinsey, workers spend up to 28\% of their time checking their email.  While most companies have a rigorous spam filter or secure email gateway in place (such as Proofpoint or Gmail), it is still a fruitful exercise in machine learning to examine classifier and feature extraction in the spam space.\par 
+We first use the given ``vanilla'' feature extraction strict, modified to threshold 100, to extract bag-of-word features from our dataset.  Using cross-validation, we obtain a validation score for each of the following three models -- Naive Bayes, Logistic Regression, and AdaBoost.  Picking the highest validation score, we re-train the model on the full training set, and obtain the final test accuracy upon the testing set originally given.\par 
+Next, as more of an experiment, we use custom features extracted with more meaning than simple bag-of-words features.  Splitting the training set into a simple training / validation partition, we train the following models on the sub-training set -- Random Forests, SVM (Gaussian), SVM (Sigmoid), SVM (Linear), Deep Neural Network, and Logistic Regression.  We take the model with the highest accuracy on the untouched validation set, and then re-train said model on the full training set.  Finally, we evaluate this model on the testing set to obtain an unbiased test accuracy.
+%\section{Related Work}
+%
+%This data set is the canonical text multi class classification data set in the machine learning community, and has been used as a benchmark for text classification methods in many contexts. In particular, recent text classification methods have used the bag-of-words representation of this data set projected down to a set of latent \emph{topics}, where the projection is informed by the class label~\cite{zhu2009,lacoste2009}. Then, for testing, new posts also are considered in the context of the low-dimensional topic space instead of their bag-of-words representation. This suggests that feature selection may benefit the classification task.
 \subsection{Data processing}
-
-We downloaded the 20 Newsgroups data set on January 5th, 2015 from the UCI Machine Learning Archive~\footnote{{\tt http://kdd.ics.uci.edu/}}. We used the Python NLTK library to tokenize, convert to lower case, remove stop words, lemmatize, stem each word using the Porter stemming method, and filtering words that occurred fewer than $200$ times in the corpus~\cite{bird2009}. The resulting vocabulary contained $3,256$ words. We converted these words to the bag-of-words format as features of the posts; we used the newsgroup name that each document was posted to as its label. We considered the effect of feature selection on the classifiers, where feature selection is performed using a support vector machine with a linear kernel and $\ell_1$ penalty. After feature selection, we were left with $488$ dictionary words in the bag-of-words representation, which is $15\%$ of the original feature set size.
-
+The TREC 2007 dataset was downloaded from the COS424 Piazza website on February 13th, 2015, with the folder already partitioned into a 90/10 training and testing split.  Using the \lstinline{email_process.py}\lstinline{} script that was written for us (with a small modification of dictionary threshold 200 lowered to 100), we extracted enough word counts for each training and testing emai to form a dataframe with the 45000 examples, and 15228 features per email.\par 
+For the custom features, we )insert stuff from Daway's explanation here)
 \subsection{Classification methods}
 
-We use ten different classification methods from the SciKitLearn Python libraries~\cite{scikit-learn}. All parameterizations are the default unless specified.
+We use three different classification methods from the SciKitLearn Python libraries for the vanilla feature set (all parameterizations are the default unless specified)
 \begin{enumerate}
-\item \emph{$K$-nearest neighbors} (KNN): using ten nearest neighbors and the ``KDTree" algorithm
-\item \emph{Logistic regression with $\ell_2$ penalty} (LR): using stochastic gradient descent 
-\item \emph{Perceptron with $\ell_2$ penalty} (P2): using stochastic gradient descent
-\item \emph{Hinge loss with $\ell_2$ penalty} (HL2): using stochastic gradient descent
-\item \emph{Naive Bayes classifier} (NB): using multinomial implementation
-\item \emph{Support vector machine with linear kernel} (SVML): 
-\item \emph{Support vector machine with squared exponential kernel} (SVMS): 
-\item \emph{AdaBoost} (AB): using $100$ estimators
-\item \emph{Decision tree} (DT): using Gini impurity scores 
-\item \emph{Random forest} (RF): using Gini impurity scores and 100 trees
+\item \emph{Naive Bayes} (NB): Using the default parameters of MultinomialNB()
+\item \emph{Logistic regression with $\ell_2$ penalty} (LOG): built on liblinear library
+\item \emph{AdaBoost} (AdB): using $50$ decision trees as weak learners
 \end{enumerate}
 
-Because this problem is one of multiclass classification, we trained and tested each of these classifiers as binary classifiers for each class using one-versus-rest classification; for this we also used the SciKit-Learn library. Because there were equal numbers of samples in each class, we averaged the evaluation metrics across the twenty classes for the values across the $20$ newsgroups.
-
+For the custom feature set, we use six different classification methods in R:
+\begin{enumerate}
+\item \emph{Random Forest} (RF): default params of randomForest
+\item \emph{Support Vector Machine (Gaussian)} (SVMG): default params
+\item \emph{Support Vector Machine (sigmoid)} (SVMS): default params
+\item \emph{Support Vector Machine (linear)} (SVML): default params
+\item \emph{Deep Neural Network} (DNN): 100 epochs, tanh activation, 3 layers of 50 nodes, 50\% drop-out for each layer, 20\% of inputs dropped
+\end{enumerate}
 \subsection{Evaluation}
-
-For each classification method, we performed stratified 10-fold cross validation on the 20 Newsgroups data. We maintained the same folds across each of the classifiers. We compared the different classifier results using precision, false discovery rate (FDR), $F_1$ score, and wall clock time in seconds, all of which were averaged over the results from each of the 20 classes (each of which had identical numbers of posts). In particular, denoting the number of false positives (FPs), true positives (TPs), false negatives (FNs), true negatives (TNs), and false discovery rate (FDR), we can define precision and recall as
-\begin{equation*}
-\mbox{precision} = \frac {TP}{TP+FP} = 1 - FDR \mbox{,  recall} = \frac {TP}{TP+FN}
-\end{equation*}
-and $F_1$-score, which is the harmonic mean of precision and recall:
-\begin{equation*}
-F_1 = 2 \frac {precision \times recall} {precision + recall} = 2 \frac{TP}{2TP+FP+FN}.
-\end{equation*}
-
+In the vanilla feature space, we used 5-fold cross validation on the full training set to obtain a full generalization error for each of the three models.  This is a simple accuracy metric -- we sum the total number of errors each model incurred on each validation fold, and subtract it from 1.  The k-fold cross validation gives us a prediction for each training sample when it is unseen, allowing us to use that total error as a metric to choose between models.  In other words, we have the metric $A_q$ for model $q$:
+\begin{align*}
+A_q &= 1 - \frac{\sum_{i=1}^5(FP_{fi} + FN_{fi})}{N}
+\end{align*}
+where $FP_{fi}$ is the number of false positives obtained from training on all folds but fold $i$, and predicting on fold $i$ (likewise for the false negatives $FN_{fi}$.\par
+For our experimental custom feature set, we simply set aside 20\% of the training set as a validation set, to avoid the cost of training the same model $k$ times in the cross validation.  Here, we also obtain some more in-depth metrics rather than just the validation accuracy: we also use the precision, recall, $F_1$-score, and log loss metrics, defined as
+\begin{align*}
+\text{precision} &= \frac{TP}{TP + FP}\\
+\text{recall} &= \frac{TP}{TP + FN}\\
+F_1 &= 2 \cdot \frac{\text{precision } \cdot \text{ recall}}{\text{precision } + \text{ recall}}\\
+\text{log-loss} &= -\frac{1}{N}\sum_{i=1}^N\sum_{j=1}^My_{i,j}\log(p_{i,j})
+\end{align*}
+where for the log-loss, there are $N$ samples, $M$ classes (2 in our case), $y_{i,j}$ is 1 if sample $i$ is in class $j$, and 0 otherwise, and $p_{i,j}$ is the model's probabilistic estimate of sample $i$ belonging in class $j$.
 \section{Results}
-
 \subsection{Evaluation results}
-
-We found variable performance of each of the ten classifiers on the 20 Newsgroups data, particularly with respect to recall (Table~\ref{tab:classifiers}). In particular, we see that the linear classifiers (LR, P2, HL2, NB, and SVML) tend to perform worse on this task on average relative to the non-linear classifiers (AB, SVMS, DT, RF), although logistic regression has strong performance for a linear classifier. Of the non-linear classifiers, the AdaBoost, random forest, and decision tree classifiers have stronger performance than the SVMS. Overall, the decision tree shows competitive performance, despite its simplicity relative to the other nonlinear methods. This suggests that it is a non-additive combination of the word counts, rather than either a very high dimensional basis function (SVMS) or ensemble classifiers (RF, AdaBoost), that creates the biggest gains in performance over linear classifiers.
-
-\begin{table}[htbp]
-\small
-   \centering
-   \begin{tabular}{@{}|c|c|c|c|c|c|c|c|c|@{}} % Column formatting, @{} suppresses leading/trailing space 
-   \hline
-    &  \multicolumn{4}{c}{No feature selection} &
-  \multicolumn{4}{c|}{Feature selection}  \\
-  \cline{2-9}
-   Classifier & Prec & Recall & $F_1$ & Time (s)& Prec & Recall & $F_1$ & Time (s) \\ \hline \hline
-      KNN   &  0.77 & 0.34 & 0.45 & 1480.4 & 0.74 & 0.40 & 0.54 & 272.1\\
-        LR   &  0.81 & 0.89 & 0.85 & 23.7& 0.76 & 0.91 & 0.82 & 14.8 \\
-      P2      &  0.68 & 0.22 & 0.25 & 5.99& 0.66 & 0.20 & 0.21 & 0.98\\
-      HL2    &  0.70 & 0.22 & 0.24 & 6.04& 0.66 & 0.19 & 0.19 & 0.97 \\
-      NB &  0.39 & 0.94 & 0.53 & 4.34& 0.36 & 0.95 & 0.50 & 0.69  \\
-      SVML &  0.78 & 0.90 & 0.83 & 11.1 & 0.65 & 0.90 & 0.75 & 4.1 \\
-      SVMS &  0.83 & 0.68 & 0.74 & 929.9& 0.84 & 0.89 & 0.86 & 150.6 \\
-      AB & 0.88 & 0.94 & 0.91 & 1424.2& 0.89 & 0.94 & 0.91 & 178.4 \\
-      DT & 0.89 & 0.93 & 0.91 & 24.2& 0.89 & 0.93 & 0.90 & 3.0 \\
-      RF &  0.87 & 0.79 & 0.83 & 28.5& 0.89 & 0.89 & 0.89 & 4.5 \\ \hline
-   \end{tabular}
-   \caption{{\bf Results from ten classifiers on 20 Newsgroups data.} For each classifier, we report precision, recall,  $F_1$-scores, and wall clock time in seconds for the one-versus-rest classification task with 10-fold cross validation.}
-   \label{tab:classifiers}
-\end{table}
-
-For each of the one-versus-rest classification problems, we extracted the \emph{Gini} impurity scores from a trained random forest classifier. Gini impurity for a particular feature represents the information gain, or the average reduction in entropy of the classifier before and after a that feature is used across all of the trees in the random forest; a larger value indicates greater predictive power. We found that the top ten words, with respect to Gini impurity, for each class (Table~\ref{tab:words}) were representative of the topics discussed in that newsgroup (e.g., {\tt talk.religion.misc} includes \emph{moral} and \emph{religion}); there were also a number of words that were in the top ten word lists for a number of newsgroup classes, suggesting that they were important in discriminating one of the newsgroups with a $0$ label from the newsgroup with the $1$ label (e.g., \emph{mideast} is a strong indicator of {\tt talk.politics.mideast}).
-
-\begin{table}[htbp]
-   \centering
-   \tiny
-   \begin{tabular}{@{}|c|c|c|c|c|c|c|@{}} % Column formatting, @{} suppresses leading/trailing space 
-   \hline
-   rec.motorcycles & comp.sys.mac.hardware & talk.politics.misc & soc.religion.christian & comp.graphics & sci.med & talk.religion.misc\\ \hline \hline
-      Austin   &  apollo& access & apple & 3 & digest &  aft\\
-        b  &  central& also & atheist & come & do & chip \\
-      biblic     &  come& client & chip & get & font & mideast \\
-      columbia  & handheld & crabapple & geb & govern & mchp & moral \\
-      doctor &  i3150101& gateway & go & handheld & med & package\\
-      ecn &  me & lc & matter & IGC & path & point\\
-      motif &  patient & mideast & rec & mideast & pitch & religion\\
-      reason &  q& operation & religion & sun & say & sale\\
-      say &  sun & point & run & win & since & take\\
-      speed &  win & take & sin & write & Toronto & (quote) \\ \hline \hline
- comp.windows.x & comp.sys.ibm.pc.hardware & talk.politics.guns & alt.atheism & comp.os.ms-windows.misc & sci.crypt & sci.space\\ \hline \hline
-      come & car & astro & also & come & child & AI\\
-      engr & come & baseball & ATF & distribute & Clinton & ask\\
-      law & handheld & fan & atheism & drive & crime & audio\\
-      mideast & i3150101 & fire & Canada & FBI & ee & device\\
-      motherboard & ID & ground & internet & love & electron & larc\\
-      well & me & mideast & jim & mideast & kent & monitor\\
-      win & mideast & point & king & nuclear & order & oracle\\
-      write & patient & take & mideast & take & printer & say\\
-      x & science & we & religion & win & say & software\\
-      xliv & sun & watson & take & write & sea & z\\ \hline
-      \hline
- misc.forsale & rec.sport.hockey & rec.sport.baseball & sci.electronics & rec.autos & talk.politics.mideast & \\ \hline \hline
-   zoo & b & b & au & Austin & April&\\
-   come  & c & c & batf & cantaloup & Arizona&\\
-   comp & enterpoop & clock & ci & de & cso&\\
-   format & f & g & come & eng & Islam&\\
-   mideast & g & Henry & crime & food & Israel&\\
-   observe & HIV & HIV & effect & mideast & Michael&\\
-   rate & reason & picture & mchp & motif & pain&\\
-   rec & speed & reason & say & reason & point&\\
-   Rutgers & tax & speed & software & say & SNI&\\ 
-   sgi & widget & tax & vm & speed & tu&\\ \hline
-   \end{tabular}
-   \caption{{\bf Top $10$ predictive words for each of the 20 Newsgroups.} The top ten words were identified after feature selection from a fitted random forest classifier using words ranked by their Gini impurity scores.}
-   \label{tab:words}
+For our vanilla features and three models, we include the number of misclassified samples in each validation fold (indexing from f0 to f4 instead of f1 to f5), the average number of misclassifications per fold, as well as the total number of misclassifications, which is easily manipulated into the generalization error (and accuracy).
+\begin{table}[h]
+\centering
+\large
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|}
+\hline
+    & f0 & f1 & f2 & f3 & f4 & average & total & gen\_acc \\ \hline
+NB  & 29 & 18 & 21 & 38 & 25 & 26.2    & 131   & 0.997089 \\ \hline
+LOG & 12 & 9  & 9  & 15 & 10 & 11.0    & 55    & 0.998778 \\ \hline
+AdB & 13 & 19 & 15 & 26 & 21 & 18.8    & 94    & 0.997911 \\ \hline
+\end{tabular}
 \end{table}
 
 \subsection{Computational speed}
